<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_basic_info_parent"
    tools:context=".ui.fragments.BasicInfoFragment">

    <TextView
        android:id="@+id/textview_set_your_login_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/basic_info_text"
        android:textSize="40sp"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toStartOf="@+id/info_guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/info_guideline1"
        app:layout_constraintTop_toTopOf="@+id/info_horizontal_guideline1" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toStartOf="@+id/info_guideline2"
        app:layout_constraintStart_toStartOf="@+id/info_guideline1"
        app:layout_constraintTop_toTopOf="@+id/info_horizontal_guideline2" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toStartOf="@+id/info_guideline2"
        app:layout_constraintStart_toStartOf="@+id/info_guideline1"
        app:layout_constraintTop_toTopOf="@+id/info_horizontal_guideline3" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintDimensionRatio="6:1"
        app:layout_constraintEnd_toStartOf="@+id/info_guideline2"
        app:layout_constraintStart_toStartOf="@+id/info_guideline1"
        app:layout_constraintTop_toTopOf="@+id/info_horizontal_guideline4" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/continue_text"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toStartOf="@+id/info_guideline2"
        app:layout_constraintStart_toStartOf="@+id/info_guideline1"
        app:layout_constraintTop_toTopOf="@+id/info_horizontal_guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/info_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/info_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/info_horizontal_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/info_horizontal_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/info_horizontal_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/info_horizontal_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/info_horizontal_guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />


</androidx.constraintlayout.widget.ConstraintLayout>