<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_dj_id_parent"
    tools:context=".ui.fragments.DjIdFragment">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dj_id_text"
...
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintEnd_toStartOf="@+id/dj_id_guideline2"
        app:layout_constraintStart_toStartOf="@+id/dj_id_guideline1"
        app:layout_constraintTop_toTopOf="@+id/dj_id_horizontal_guideline4" />

    <Button
        android:id="@+id/button_send"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/send_text"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toStartOf="@+id/dj_id_guideline2"
        app:layout_constraintStart_toStartOf="@+id/dj_id_guideline1"
...
