<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_login_parent"
    tools:context=".ui.fragments.LoginFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1.5:1"
...
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login_text"
        app:layout_constraintDimensionRatio="2.5:1"
        app:layout_constraintEnd_toStartOf="@+id/button_register"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/login_guideline1"
        app:layout_constraintTop_toBottomOf="@id/login_horizontal_guideline4" />

    <Button
        android:id="@+id/button_register"
...
