<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_receive_requests_parent"
    tools:context=".ui.onboarding.ReceiveRequestsFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1.5:1"
...
        app:layout_constraintDimensionRatio="1.5:1"
        app:layout_constraintEnd_toEndOf="@id/onboarding_guideline2"
        app:layout_constraintStart_toStartOf="@id/onboarding_guideline1"
        app:layout_constraintTop_toBottomOf="@id/textview_receive_requests" />

    <Button
        android:id="@+id/button_get_started"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/get_started_text"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toStartOf="@+id/onboarding_guideline2"
        app:layout_constraintStart_toStartOf="@+id/onboarding_guideline1"
...
